tests/models/enum/named/bool/fail/min_items.stderr
error: Support condition is alias, default and validate
 --> tests/models/enum/named/bool/fail/min_items.rs:6:9
  |
6 |         value: bool
  |         ^^^^^
